--- a/app/src/main/res/layout/activity_edit_event.xml
+++ b/app/src/main/res/layout/activity_edit_event.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/charcoal"
     tools:visibility="visible">
     >
 
@@ -86,26 +87,29 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="16dp">
+            android:layout_marginTop="16dp"
+            android:gravity="center_horizontal">
+
             <Button
                 android:id="@+id/event_Date"
+                style="@style/Widget.Material3.Button.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="58dp"
-                android:layout_marginBottom="20dp"
                 android:layout_marginRight="80dp"
-                style="@style/Widget.Material3.Button.Icon"
-                app:icon="@drawable/date"
-                android:text="@string/change_date" />
+                android:layout_marginBottom="20dp"
+                android:text="@string/change_date"
+                app:icon="@drawable/date" />
 
             <Button
                 android:id="@+id/event_time"
+                style="@style/Widget.Material3.Button.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="58dp"
                 android:layout_marginBottom="16dp"
-                style="@style/Widget.Material3.Button.Icon"
-                app:icon="@drawable/time"
-                android:text="@string/change_time" />
+                android:backgroundTint="@color/charcoal"
+                android:text="@string/change_time"
+                android:textColor="@color/white"
+                app:icon="@drawable/time" />
 
         </LinearLayout>
 
@@ -119,9 +123,9 @@
                 style="@style/Widget.Material3.Button.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="58dp"
-                android:layout_marginBottom="40dp"
                 android:layout_marginLeft="1dp"
                 android:layout_marginRight="50dp"
+                android:layout_marginBottom="40dp"
                 android:text="@string/change_image"
                 app:icon="@drawable/pick_image" />
 
@@ -136,16 +140,15 @@
         </LinearLayout>
 
 
-
         <Button
             android:id="@+id/event_create_button"
+            style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/save_changes_button"
-            style="@style/Widget.Material3.Button.OutlinedButton"
+            android:backgroundTint="@color/charcoal"
 
-            />
+            android:text="@string/save_changes_button" />
 
         <ScrollView
             android:layout_width="match_parent"
