--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,92 +5,91 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?android:attr/colorBackground"
+        android:orientation="vertical"
         android:padding="24dp">
 
         <TextView
-            android:layout_marginTop="24dp"
-            android:text="Sign-Up!"
-            android:textSize="30sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="24dp"
             android:layout_marginBottom="16dp"
-            android:textStyle="bold"
-            android:fontFamily="@font/jetbrains_mono_medium"/>
+            android:fontFamily="@font/jetbrains_mono_medium"
+            android:text="Sign-Up!"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_marginTop="24dp"
             android:id="@+id/signup_username"
+            style="@style/ThemeOverlay.App.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:hint="@string/username"
             app:endIconDrawable="@drawable/account_circle_fill0_wght400_grad0_opsz48"
-            app:endIconMode="custom"
-            style="@style/ThemeOverlay.App.TextInputLayout"
->
+            app:endIconMode="custom">
 
             <com.google.android.material.textfield.TextInputEditText
-            android:enabled="true"
-            android:focusable="true"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"  />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:enabled="true"
+                android:focusable="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/signup_email"
+            style="@style/ThemeOverlay.App.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email"
             app:endIconDrawable="@drawable/mail_new"
-            app:endIconMode="custom"
-            style="@style/ThemeOverlay.App.TextInputLayout"
-            >
+            app:endIconMode="custom">
+
             <com.google.android.material.textfield.TextInputEditText
-                android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/signup_password"
+            style="@style/ThemeOverlay.App.TextInputLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="@string/password"
             android:inputType="textPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:passwordToggleEnabled="true"
-            style="@style/ThemeOverlay.App.TextInputLayout">
+            app:passwordToggleEnabled="true">
 
-        <com.google.android.material.textfield.TextInputEditText
+            <com.google.android.material.textfield.TextInputEditText
 
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:inputType="textPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:focusable="true"
 
-            android:focusable="true"/>
+                android:inputType="textPassword" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp">
+            android:layout_marginRight="0dp"
+            android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/signup_fname"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:hint="@string/first_name"
-                android:layout_marginRight="5dp"
                 style="@style/ThemeOverlay.App.TextInputLayout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:hint="@string/first_name"
 
                 app:endIconContentDescription="@string/first_name"
                 app:endIconMode="custom">
@@ -98,20 +97,19 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="text"
-                    android:focusable="true"/>
+                    android:focusable="true"
+                    android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/signup_lname"
+                style="@style/ThemeOverlay.App.TextInputLayout"
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
+
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
-
-                android:layout_height="match_parent"
-                android:hint="@string/last_name"
-                style="@style/ThemeOverlay.App.TextInputLayout"
-                >
+                android:hint="@string/last_name">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -119,19 +117,19 @@
                     android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
-    </LinearLayout>
+        </LinearLayout>
 
         <Button
-            style="@style/Widget.Material3.Button.OutlinedButton"
             android:id="@+id/register_button"
-            android:layout_marginTop="32dp"
+            style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_width="200dp"
-            android:fontFamily="@font/jetbrains_mono_medium"
-            android:backgroundTint="@color/charcoal"
-            android:textColor="@color/orange_neon"
-            android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:text="@string/register" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="32dp"
+            android:backgroundTint="?attr/colorSurfaceInverse"
+            android:fontFamily="@font/jetbrains_mono_medium"
+            android:text="@string/register"
+            android:textColor="@color/orange_neon" />
     </LinearLayout>
 
 
