--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?android:attr/colorBackground"
         android:orientation="vertical"
         android:padding="50dp">
 
@@ -28,14 +29,14 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
             android:scaleType="centerCrop"
-            android:text="@string/UserName"/>
+            android:text="@string/UserName" />
 
         <Button
             android:id="@+id/logout_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/blue_grotto"
             android:layout_marginBottom="20dp"
+            android:backgroundTint="@color/blue_grotto"
             android:text="@string/LogoutButtonText" />
     </LinearLayout>
 </FrameLayout>
