--- a/app/src/main/res/layout/fragment_dialog.xml
+++ b/app/src/main/res/layout/fragment_dialog.xml
@@ -4,19 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.dialogFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?android:attr/colorBackground"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/usr_attnd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/users_attending_the_event"
             android:fontFamily="@font/jetbrains_mono_medium"
-            android:textStyle="bold"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:text="@string/users_attending_the_event"
+            android:textStyle="bold" />
 
         <ListView
             android:id="@+id/listUsers"
