--- a/app/src/main/res/layout/fragment_events_layout.xml
+++ b/app/src/main/res/layout/fragment_events_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="?android:attr/colorBackground">
 
 
     <ScrollView
@@ -10,22 +10,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="80dp"
-        android:background="@color/purple_light_haze">
+        android:background="?android:attr/colorBackground">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?android:attr/colorBackground"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/see_no_evil"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="32sp"
-                android:gravity="center"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/jetbrains_mono_extrabold_italic"
-                android:text="Filter by:" />
+                android:gravity="center"
+                android:text="Filter by:"
+                android:textSize="32sp" />
 
             <Spinner
                 android:id="@+id/spinner4"
