--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="?android:attr/colorBackground">
 
    <androidx.coordinatorlayout.widget.CoordinatorLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:gravity="center"
           android:layout_marginStart="17dp"
-          android:layout_marginEnd="30dp"
           android:layout_marginTop="200dp"
+          android:layout_marginEnd="30dp"
           android:layout_marginBottom="200dp"
+          android:gravity="center"
           android:orientation="vertical">
 
          <LinearLayout
@@ -25,13 +27,13 @@
              android:orientation="horizontal">
 
             <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/no_results"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/no_results"
-                android:textSize="20sp"
-                android:gravity="center"
                 android:fontFamily="@font/jetbrains_mono_medium"
+                android:gravity="center"
                 android:lineSpacingExtra="4dp"
+                android:textSize="20sp"
                 tools:ignore="RtlSymmetry" />
 
          </LinearLayout>
@@ -43,16 +45,16 @@
              android:orientation="horizontal">
 
             <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/see_no_evil"
-                android:textSize="18sp"
-                android:layout_marginTop="4dp"
-                android:padding="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="37dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="37dp"
-                android:fontFamily="@font/jetbrains_mono_light"/>
+                android:fontFamily="@font/jetbrains_mono_light"
+                android:padding="5dp"
+                android:textSize="18sp" />
 
          </LinearLayout>
 
@@ -63,15 +65,15 @@
              android:orientation="horizontal">
 
             <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/see_no_evil2"
-                android:textSize="18sp"
-                android:layout_marginTop="4dp"
-                android:padding="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="57dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="37dp"
-                android:fontFamily="@font/jetbrains_mono_light" />
+                android:fontFamily="@font/jetbrains_mono_light"
+                android:padding="5dp"
+                android:textSize="18sp" />
          </LinearLayout>
 
          <LinearLayout
@@ -80,15 +82,15 @@
              android:orientation="horizontal">
 
             <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/see_no_evil3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/see_no_evil3"
-                android:textSize="18sp"
-                android:layout_marginTop="4dp"
-                android:padding="5dp"
                 android:layout_marginStart="57dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="37dp"
-                android:fontFamily="@font/jetbrains_mono_light" />
+                android:fontFamily="@font/jetbrains_mono_light"
+                android:padding="5dp"
+                android:textSize="18sp" />
          </LinearLayout>
 
       </LinearLayout>
@@ -98,53 +100,54 @@
           android:id="@+id/recycler_view_queried"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:layout_marginTop="90dp"
-          android:layout_marginBottom="80dp"
           android:layout_marginLeft="5dp"
+          android:layout_marginTop="90dp"
           android:layout_marginRight="5dp"
+          android:layout_marginBottom="80dp"
           android:padding="2dp"
           app:layout_behavior="@string/searchbar_scrolling_view_behavior"
-          tools:ignore="PrivateResource">
-      </androidx.recyclerview.widget.RecyclerView>
+          tools:ignore="PrivateResource"></androidx.recyclerview.widget.RecyclerView>
 
       <com.google.android.material.appbar.AppBarLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
 
-      <com.google.android.material.search.SearchBar
-          android:id="@+id/search_bar"
-          style="@style/Widget.Material3.Button.OutlinedButton"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:queryBackground="@null"
-          android:submitBackground="@null"
-          android:background="@color/purple_light_haze"
-          android:backgroundTint="@color/purple_light_haze"
-          android:hint="@string/search_events_hint">
+         <com.google.android.material.search.SearchBar
+             android:id="@+id/search_bar"
+             style="@style/Widget.Material3.Button.OutlinedButton"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:background="?android:attr/colorForeground"
+             android:backgroundTint="?android:attr/colorForegroundInverse"
+             android:foregroundTint="?android:attr/colorForegroundInverse"
+             android:hint="@string/search_events_hint"
+             android:queryBackground="@null"
+             android:submitBackground="@null"
+             app:strokeColor="@color/black">
 
-      </com.google.android.material.search.SearchBar>
+         </com.google.android.material.search.SearchBar>
       </com.google.android.material.appbar.AppBarLayout>
 
       <com.google.android.material.search.SearchView
-            android:id="@+id/search_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/searchHint"
-            android:queryBackground="@null"
-            android:submitBackground="@null"
-            app:showAsAction="always"
-            app:layout_anchor="@id/search_bar">
+          android:id="@+id/search_view"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:hint="@string/searchHint"
+          android:queryBackground="@null"
+          android:submitBackground="@null"
+          app:layout_anchor="@id/search_bar"
+          app:showAsAction="always">
 
-          <androidx.recyclerview.widget.RecyclerView
-              android:id="@+id/recycler_view"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:layout_margin="5dp"
-              android:padding="2dp"
-              app:layout_behavior="@string/searchbar_scrolling_view_behavior"
-              tools:ignore="PrivateResource" />
+         <androidx.recyclerview.widget.RecyclerView
+             android:id="@+id/recycler_view"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:layout_margin="5dp"
+             android:padding="2dp"
+             app:layout_behavior="@string/searchbar_scrolling_view_behavior"
+             tools:ignore="PrivateResource" />
 
-       </com.google.android.material.search.SearchView>
+      </com.google.android.material.search.SearchView>
 
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
