--- a/app/src/main/res/layout/phone_no_edit_field_layout.xml
+++ b/app/src/main/res/layout/phone_no_edit_field_layout.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?android:attr/colorBackground"
     android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/acc_contact_phone_no_layout"
+        style="@style/ThemeOverlay.App.TextInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="New Phone Number"
-        style="@style/ThemeOverlay.App.TextInputLayout">
+        android:hint="New Phone Number">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/acc_contact_phone_no_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
