--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MyApplication" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/green_neon> -->
+        <item name="colorPrimary">@color/blue_grotto</item>
+        <item name="colorPrimaryDark">@color/charcoal</item>
+        <item name="colorAccent">@color/blue_grotto</item>"
+        <item name="android:windowBackground">@color/charcoal_light</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="colorSurface">@color/backgroundDark</item>
+        <item name="colorOnSurface">@color/charcoal</item>
+        <item name="colorSecondary">@color/blue_grotto</item>
     </style>
 </resources>
